--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,15 @@
 		}
 	},
 
+	"customizations": {
+		// Add your customizations here. See https://aka.ms/devcontainer.json for examples.
+		"vscode": {
+			"settings": {
+				"python.pythonPath": "/usr/local/bin/python"
+			}
+		}
+	},
+
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip3 install -r requirements.txt"
 
