--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cycler==0.12.1
 fonttools==4.51.0
 gitdb==4.0.11
 GitPython==3.1.41
+graphviz==0.20.3
 idna==3.7
 Jinja2==3.1.3
 jsonschema==4.21.1
