--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,8 @@
 		}
 	},
 
+	// Use hardcoded docker container name, this is used in exec-devcontainer.sh script
+	"runArgs": ["--name", "poker_ne_streamlit_devcontainer"],
 	"customizations": {
 		// Add your customizations here. See https://aka.ms/devcontainer.json for examples.
 		"vscode": {
@@ -31,7 +33,11 @@
 	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt"
+
+	"postCreateCommand": "pip3 install -r requirements.txt",
+	// https://github.com/microsoft/vscode/issues/110050#issuecomment-1008467861
+	// This env file is used in exec-devcontainer.sh script
+	"postStartCommand": "printenv > .devcontainer/container.env"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
